# api_IJCA

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api_ijca/: dados.py  routes.py
