[project]
name = "api-ijca"
version = "0.1.0"
description = ""
authors = [
    {name = "Camila Claudino ",email = "camila.claudino@upe.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "api_ijca", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
